--- a/creative.css
+++ b/creative.css
@@ -1,5 +1,5 @@
 body {
-  background: url("https://vignette.wikia.nocookie.net/animal-jam-roleplay/images/b/b2/587d35135ccacf032da6fbff.png/revision/latest?cb=20180309213014")
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJv_Bq0X7PRN5ZldUQF4Ypo08CDy7Uc48OOg&usqp=CAU")
     no-repeat center fixed;
       background-size: cover;
 }
