--- a/creative.css
+++ b/creative.css
@@ -1,5 +1,5 @@
 body {
-  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJv_Bq0X7PRN5ZldUQF4Ypo08CDy7Uc48OOg&usqp=CAU")
+  background: url(webbackground.jpg)
     no-repeat center fixed;
       background-size: cover;
 }
